--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "html2canvas": "https://esm.sh/html2canvas@^1.4.1",
+    "@emailjs/browser": "https://esm.sh/@emailjs/browser@^4.4.1",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "@emailjs/browser": "https://esm.sh/@emailjs/browser@^4.4.1"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
