--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instant Janitorial Quote | The Total Facility Services Group</title>
+    <title>Instant Janitorial Quote | The Facility Services LLC</title>
+    
+    <!-- Google Analytics 4 Placeholder -->
+    <!-- Replace 'G-XXXXXXXXXX' with your actual tracking ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
