feat: Configure GA4 and add AlertCircle icon
Updates the Google Analytics 4 tracking ID in `index.html` to the correct value and adds the `AlertCircle` icon to the `Icons.tsx` component. Also, imports `AlertCircle` and `Minus` icons in `App.tsx` to prepare for future UI enhancements and refactors the `rooms` state initialization to an empty array.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
@@ -6,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instant Janitorial Quote | The Facility Services LLC</title>
     
-    <!-- Google Analytics 4 Placeholder -->
-    <!-- Replace 'G-XXXXXXXXXX' with your actual tracking ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZD8ZDBXZB6"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX');
+      gtag('config', 'G-ZD8ZDBXZB6');
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
